# my-op-mart

./: .gitignore  docker-compose.yaml
.github/workflows/: ci.yml
inventory-service/: Dockerfile  pyproject.toml
inventory-service/inventory_service/: main.py  model.py
inventory-service/tests/: test_main.py
notification-service/: Dockerfile  pyproject.toml
notification-service/notification_service/: config.py  main.py
notification-service/notification_service/kafka/: consumer.py
order-service/: Dockerfile  orders.db  pyproject.toml
order-service/order_service/: main.py
payment-service/: Dockerfile  payments.db  pyproject.toml
payment-service/payment_service/: main.py
product-service/: Dockerfile  pyproject.toml
product-service/product_service/: main.py
scripts/: deploy_to_docker_hub.sh  docker-compose-down.sh  docker-compose-up.sh
terraform/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup
user-service/: .env.example  Dockerfile  kafka_utils.py  pyproject.toml
user-service/features/: user.feature
user-service/features/steps/: users_steps.py
user-service/proto/: user.proto
user-service/tests/: test_main.py
user-service/user_service/: main.py  model.py  test.py
